@@ -1,4 +1,4 @@
-#!/bin/bash -eu
+#!/bin/bash
 # Copyright 2022 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,32 +19,37 @@ export JAVA_HOME="$OUT/open-jdk-17"
 mkdir -p $JAVA_HOME
 rsync -aL --exclude=*.zip "/usr/lib/jvm/java-17-openjdk-amd64/" "$JAVA_HOME"
 
-CURRENT_VERSION=$(sed -nr "s/^version=(.*)/\1/p" gradle.properties)
+cat > add-shadow.diff <<- EOM
+diff --git a/core/build.gradle b/core/build.gradle
+index d6119e9..1ffa9a1 100644
+--- a/core/build.gradle
++++ b/core/build.gradle
+@@ -1,6 +1,7 @@
+ plugins {
+     id 'io.spring.convention.spring-module'
+     id 'com.intershop.gradle.javacc'
++    id 'com.github.johnrengelman.shadow' version '7.0.0'
+ }
+ 
+ javacc {
+@@ -54,4 +55,4 @@ compileTestJava {
+ 
+ test {
+     jvmArgs '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
+-}
+\ No newline at end of file
++}
+EOM
 
-GRADLE_ARGS="-x test -x javadoc"
+git apply add-shadow.diff
 
-./gradlew shadowJar $GRADLE_ARGS -b ldap/spring-security-ldap.gradle
-./gradlew shadowJar $GRADLE_ARGS -b config/spring-security-config.gradle
-./gradlew shadowJar $GRADLE_ARGS -b core/spring-security-core.gradle
-./gradlew build -b dependencies/spring-security-dependencies.gradle
-./gradlew shadowJar $GRADLE_ARGS -b messaging/spring-security-messaging.gradle
-./gradlew shadowJar $GRADLE_ARGS -b web/spring-security-web.gradle
-./gradlew shadowJar $GRADLE_ARGS -b test/spring-security-test.gradle
-./gradlew shadowJar $GRADLE_ARGS -b oauth2/oauth2-core/spring-security-oauth2-core.gradle
-./gradlew shadowJar $GRADLE_ARGS -b acl/spring-security-acl.gradle
-./gradlew shadowJar $GRADLE_ARGS -b oauth2/oauth2-client/spring-security-oauth2-client.gradle
-./gradlew shadowJar $GRADLE_ARGS -b oauth2/oauth2-jose/spring-security-oauth2-jose.gradle
+./gradlew shadowJar -p core -x test -x javadoc -x :checkstyleNohttp
+CURRENT_VERSION=$(./gradlew properties --no-daemon --console=plain | sed -nr "s/^version:\ (.*)/\1/p")
+cp "core/build/libs/spring-ldap-core-$CURRENT_VERSION-all.jar" "$OUT/spring-ldap-core.jar"
 
-# Copy all shadow jars to the $OUT folder
-find . -name "*-all.jar" -print0 | while read -d $'\0' file
-do
-    file_name=`echo $file | sed "s/-$CURRENT_VERSION-all//g" | egrep "[^\/]*.jar" -o`
-    cp $file $OUT/$file_name
-done
+ALL_JARS="spring-ldap-core.jar"
 
-ALL_JARS=`ls $OUT/*.jar -I jazzer_agent_deploy.jar -1 | tr "\n" " " | egrep "[^\/]*.jar" -o`
-
-# The class path at build-time includes the project jars in $OUT as well as the
+# The classpath at build-time includes the project jars in $OUT as well as the
 # Jazzer API.
 BUILD_CLASSPATH=$(echo $ALL_JARS | xargs printf -- "$OUT/%s:"):$JAZZER_API_PATH
 
@@ -54,7 +59,7 @@ RUNTIME_CLASSPATH=$(echo $ALL_JARS | xargs printf -- "\$this_dir/%s:"):\$this_di
 for fuzzer in $(find $SRC -name '*Fuzzer.java'); do
   fuzzer_basename=$(basename -s .java $fuzzer)
   javac -cp $BUILD_CLASSPATH $fuzzer --release 17
-  cp $SRC/[$fuzzer_basename]*.class $OUT/
+  cp $SRC/$fuzzer_basename.class $OUT/
 
   # Create an execution wrapper that executes Jazzer with the correct arguments.
   echo "#!/bin/sh
@@ -63,12 +68,9 @@ this_dir=\$(dirname \"\$0\")
 JAVA_HOME=\"\$this_dir/open-jdk-17/\" \
 LD_LIBRARY_PATH=\"\$this_dir/open-jdk-17/lib/server\":\$this_dir \
 \$this_dir/jazzer_driver --agent_path=\$this_dir/jazzer_agent_deploy.jar \
---instrumentation_excludes=com.unboundid.ldap.**:org.springframework.ldap.** \
 --cp=$RUNTIME_CLASSPATH \
 --target_class=$fuzzer_basename \
 --jvm_args=\"-Xmx2048m\" \
 \$@" > $OUT/$fuzzer_basename
   chmod u+x $OUT/$fuzzer_basename
 done
-
-cp $SRC/StrictHttpFirewallFuzzer\$Header.class $OUT/
